<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.marius.projetandroid_v0.MainDisplayGame"
    android:baselineAligned="false">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <Button
                    android:id="@+id/btn_HomeDisplayGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/backMenu"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/stylbouton"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/txtTitleGame"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:layout_below="@id/btn_HomeDisplayGame"
                    android:text="@string/titleListeGame"
                    android:textAlignment="center"/>
            <TableLayout
                android:id="@+id/gamem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTitleGame"
                android:layout_centerInParent="true">

                <TableRow android:id="@+id/tableRow0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:textSize="20dp"
                        android:text="@string/game"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textAlignment="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:text="@string/bestPlayer"
                        android:gravity="center"
                        android:textAlignment="center"/>
                </TableRow>

                <TableRow android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/txtGame1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textAlignment="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/txtGame11"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textAlignment="center"/>

                    <Button
                        android:id="@+id/btnGame1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gameDisplay10"
                        android:visibility="invisible"
                        android:background="@drawable/stylbouton"/>
                </TableRow>

                <TableRow android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/txtGame2"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textAlignment="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/txtGame22"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textAlignment="center"/>

                    <Button
                        android:id="@+id/btnGame2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gameDisplay10"
                        android:visibility="invisible"
                        android:background="@drawable/stylbouton"/>
            </TableRow>

                <TableRow android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/txtGame3"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textAlignment="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/txtGame33"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textAlignment="center"/>

                    <Button
                        android:id="@+id/btnGame3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gameDisplay10"
                        android:visibility="invisible"
                        android:background="@drawable/stylbouton"/>

            </TableRow>
                <TableRow android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/txtGame4"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textAlignment="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/txtGame44"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textAlignment="center"/>

                    <Button
                        android:id="@+id/btnGame4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gameDisplay10"
                        android:visibility="invisible"
                        android:background="@drawable/stylbouton"/>
                </TableRow>

                <TableRow android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView

                    android:layout_width="wrap_content"
                    android:id="@+id/txtGame5"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textAlignment="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/txtGame55"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textAlignment="center"/>

                    <Button
                        android:id="@+id/btnGame5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gameDisplay10"
                        android:visibility="invisible"
                        android:background="@drawable/stylbouton"/>
                </TableRow>

            </TableLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/gamem"
                    android:id="@+id/def"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_prev"
                        android:text="prev"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_next"
                        android:text="next"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/txtTitleTop10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nameGame"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_below="@id/def"
                    />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tableTop10Game"
                android:layout_below="@id/txtTitleTop10"
                android:layout_centerInParent="true">
            </TableLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
